--- a/HW1/metric/Dockerfile
+++ b/HW1/metric/Dockerfile
@@ -1,1 +1,18 @@
+# Используем базовый образ Python
+FROM python:3.9-slim
 
+# Устанавливаем рабочую директорию контейнера
+WORKDIR /app
+
+# Копируем файл requirements.txt и устанавливаем зависимости
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Копируем исходный код
+COPY src/ ./src/
+
+# Создаём директорию для логов внутри контейнера
+RUN mkdir logs
+
+# Запускаем приложение
+CMD ["python", "./src/metric.py"]
